# jemalloc-sys-test

./: .gitignore  BUILD.bazel  BUILD.jemalloc.bazel  Cargo.toml  WORKSPACE  cargo-bazel-lock.json
.github/workflows/: ci.yml
src/: lib.rs
